k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-api
  labels:
    app: hydra
    component: api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: hydra
    component: api
